remove auto format issues